syntax = "proto3";

option java_multiple_files = true;
option java_package = "it.unibo.tuprolog.solve.lpaas";
option java_outer_classname = "LPaaS";

package lpaas;

/* Solver Service & Messages*/

service Solver {
  rpc Solve(SolveRequest) returns (IteratorReply) { }

  rpc SolveWithTimeout(SolveRequestWithTimeout) returns (IteratorReply) { }

  rpc SolveWithOptions(SolveRequestWithOptions) returns (IteratorReply) { }

  rpc SolveList(SolveRequest) returns (SolutionListReply) { }

  rpc SolveListWithTimeout(SolveRequestWithTimeout) returns (SolutionListReply) { }

  rpc SolveListWithOptions(SolveRequestWithOptions) returns (SolutionListReply) { }

  rpc SolveOnce(SolveRequest) returns (IteratorReply) { }

  rpc SolveOnceWithTimeout(SolveRequestWithTimeout) returns (IteratorReply) { }

  rpc SolveOnceWithOptions(SolveRequestWithOptions) returns (IteratorReply) { }

  /* Iterate Stream of Solution */
  rpc NextSolution(NextSolutionRequest) returns (SolutionReply) { }
}

/* Request messages */

message SolveRequest {
  optional string id = 1;
  string struct = 2;
}

message SolveRequestWithTimeout {
  optional string id = 1;
  string struct = 2;
  int64 timeout = 3;
}

message SolveRequestWithOptions {
  optional string id = 1;
  string struct = 2;
  repeated Options options = 3;
}

message Options {
  string name = 1;
  optional int64 value = 2;
}

message NextSolutionRequest {
  string id = 1;
  string query = 2;
}

/* Reply messages */

message IteratorReply {
  string id = 1;
  string query = 2;
}

message SolutionReply {
  bool isYes = 4;
  bool isNo = 5;
  bool isHalt = 6;
  string query = 1;
  repeated Substitution substitution = 3;
  optional string error = 7;
}

message Substitution {
  string var = 1;
  string term = 2;
}

message SolutionListReply {
  repeated SolutionReply solution = 1;
}

/* Solver Factory Service & Messages*/

service SolverFactory {
  rpc ProduceSolver(SolverRequest) returns (SolverReply) { }
}

message SolverRequest {
  optional string staticKb = 1;
  optional string dynamicKb = 2;
}

message SolverReply {
  string id = 1;
}


